<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:id="@+id/main_layout"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity"
    android:background="#fffecc14"
    android:clickable="false"
    android:layout_gravity="top"
    android:layout_alignParentStart="true"
    android:layout_weight="1"

    style="@style/AppTheme">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_gravity="top"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:id="@+id/textWelcome"
                android:textAlignment="center"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:background="#ffffffff"
                android:textStyle="bold"
                android:paddingLeft="7dp"
                android:paddingTop="5dp"
                android:paddingRight="7dp"
                android:paddingBottom="5dp"
                android:textColor="#ff000000"

                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:id="@+id/textBeta"
                android:text="@string/beta"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:textColor="#ffffffff"
                android:background="#fffb0209"
                android:padding="5dp"
                android:layout_alignParentStart="false"
                android:layout_alignParentLeft="false"
                android:layout_alignParentTop="true"
                android:textStyle="bold" />


        </RelativeLayout>


        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="5">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/GooglePSC"
                android:background="@drawable/btnbgchange"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:id="@+id/gps_btn"
                android:layout_gravity="center_horizontal"
                android:textStyle="bold"
                android:paddingBottom="0dp"
                android:paddingLeft="7dp"
                android:paddingRight="7dp"
                android:textColor="#ff000000"
                android:layout_alignParentRight="false"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:minHeight="0dp" android:minWidth="0dp"/>


            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/NotiAccG"
                android:background="@drawable/btnbgchange"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:id="@+id/notif_btn"
                android:paddingBottom="0dp"
                android:layout_gravity="center_horizontal"
                android:textStyle="bold"
                android:paddingLeft="7dp"
                android:paddingRight="7dp"
                android:textColor="#ff000000"
                android:layout_alignParentLeft="false"
                android:layout_alignParentStart="false"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:minHeight="0dp" android:minWidth="0dp"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/PredictionD"
                android:background="@drawable/btnbgchange"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:id="@+id/btnPredictionD"
                android:textStyle="bold"
                android:layout_gravity="center_horizontal"
                android:paddingBottom="3dp"
                android:paddingLeft="7dp"
                android:paddingRight="7dp"
                android:textColor="#ff000000"
                android:layout_alignParentLeft="true"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="false"
                android:minHeight="0dp" android:minWidth="0dp"/>


        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="3">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Help"
                android:background="@drawable/btnbgchange"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:id="@+id/btnHelp"
                android:textStyle="bold"
                android:paddingBottom="3dp"
                android:paddingLeft="7dp"
                android:paddingRight="7dp"
                android:textColor="#ff000000"
                android:layout_above="@+id/btnBugRep"
                android:layout_alignParentEnd="false"
                android:layout_centerHorizontal="true"
                android:minHeight="0dp" android:minWidth="0dp"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/About"
                android:background="@drawable/btnbgchange"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:id="@+id/btnAbout"
                android:layout_gravity="center_horizontal"
                android:textStyle="bold"
                android:layout_marginTop="20dp"
                android:paddingLeft="7dp"
                android:paddingRight="7dp"
                android:textColor="#ff000000"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:minHeight="0dp" android:minWidth="0dp"
                 />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Bug_Report"
                android:background="@drawable/btnbgchange"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:id="@+id/btnBugRep"
                android:textStyle="bold"
                android:paddingBottom="3dp"
                android:paddingLeft="7dp"
                android:paddingRight="7dp"
                android:textColor="#ff000000"
                android:layout_alignParentLeft="true"
                android:layout_alignParentBottom="true"
                android:minHeight="0dp" android:minWidth="0dp"/>
        </RelativeLayout>
    </LinearLayout>


</RelativeLayout>




