<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/main_layout"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MyActivity"
    android:background="#fffecc14"
    android:clickable="false"
    android:layout_gravity="top"
    android:layout_alignParentStart="true"
    android:layout_weight="1"

    style="@style/AppTheme">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:layout_gravity="top"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"

                android:id="@+id/textWelcome"
                android:textAlignment="center"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:background="#ffffffff"
                android:textStyle="bold"
                android:paddingLeft="7dp"
                android:paddingTop="5dp"
                android:paddingRight="7dp"
                android:paddingBottom="5dp"
                android:textColor="#ff000000"

                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:id="@+id/textBeta"
                android:text="@string/beta"

                android:textColor="#ffffffff"
                android:background="#fffb0209"
                android:padding="5dp"

                android:textStyle="bold"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="false"
                android:layout_alignParentTop="true" />


        </RelativeLayout>


        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.20"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textIntro1"
                android:layout_gravity="center"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:paddingLeft="7dp"
                android:paddingTop="5dp"
                android:paddingRight="7dp"
                android:paddingBottom="5dp"
                android:textColor="#ff000000"
                android:layout_marginTop="0dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textIntro2"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:paddingLeft="7dp"
                android:paddingTop="5dp"
                android:paddingRight="7dp"
                android:paddingBottom="5dp"
                android:textColor="#ff000000"


                android:layout_marginTop="5dp"
                android:layout_below="@+id/textIntro1"
                android:layout_alignParentLeft="true"
                android:editable="false"
                android:enabled="true"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:layout_marginLeft="40dp"
                />

            <RelativeLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:layout_marginTop="20dp">

                <CheckBox
                    android:button="@drawable/checkbox_selector"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/checkBox"
                    android:checked="false"
                    android:scaleX="0.70"
                    android:scaleY="0.70"

                    android:layout_alignParentTop="true"
                    android:layout_toLeftOf="@+id/textView4"
                    android:layout_toStartOf="@+id/textView4"
                    android:layout_centerVertical="true"

                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/i_read_and_accept"
                    android:id="@+id/textView4"
                    android:textColor="#ff000000"
                    android:gravity="center_horizontal"
                    android:layout_marginLeft="2dp"
                    android:layout_centerInParent="true"

                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:id="@+id/textTerms"
                    android:textColor="#ff000000"
                    android:linksClickable="false"
                    android:onClick="showTermsDialog"

                    android:layout_alignParentTop="true"
                    android:layout_toRightOf="@+id/textView4"
                    android:layout_toEndOf="@+id/textView4"
                    android:layout_marginLeft="3dp"
                    android:layout_centerVertical="true"



                    />
            </RelativeLayout>

        </LinearLayout>

        <Button
            android:layout_width="126dp"
            android:layout_height="wrap_content"
            android:text="@string/Next"
            android:background="@drawable/btnbgchange"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:layout_alignParentBottom="true"
            android:id="@+id/button"
            android:layout_gravity="center_horizontal"
            android:textStyle="bold"
            android:layout_marginTop="0dp"
            android:textColor="#ff000000"
            android:onClick="nextOnClick"
            />


    </LinearLayout>


</RelativeLayout>

